Replace hotdeploy classloader with newer code on stackoverflow, also add JVM options required for Java9+